--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,9 @@ stages:
             inputs:
              terraformVersion: 'latest'
           - task: TerraformCLI@0
+            displayName: 'check terraform version'
+            inputs:
+             command: version
           
        
 
